--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -121,7 +121,10 @@
     ">
       <div
         id="integrationContainer"
-        style="display: block;"
+        style="
+          display: block;
+          padding-bottom: 12.5px;
+        "
       >
         <div style="
           display: flex;
@@ -257,10 +260,7 @@
         ></div>
         <div
           id="discordBotContainer"
-          style="
-            display: none;
-            margin-bottom: 12.5px;
-          "
+          style="display: none;"
         ></div>
       </div>
       <div
