--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -26,8 +26,13 @@
         background-color: #155ce1f2 !important;
       }
 
-      .throwAwayPasswordButton:hover, .discordBotButton:hover {
+      .throwAwayPasswordContainerButton:hover, .discordBotContainerButton:hover {
         background-color: #1c9addf3 !important;
+      }
+
+      .throwAwayPasswordContainerUseDisplayInput::-webkit-outer-spin-button, .throwAwayPasswordContainerUseDisplayInput::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
       }
 
       .discordBotEditorContainerBackButton:hover {
