--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -39,6 +39,14 @@
         background-color: #5451511c !important;
       }
 
+      .discordBotEditorContainerSecrets tr:nth-child(even) {
+        background-color: #dddddd;
+      }
+
+      .discordBotEditorContainerSecrets tr:nth-child(odd) {
+        background-color: whitesmoke;
+      }
+
       .ace_scrollbar::-webkit-scrollbar {
         width: 10px;
         height: 10px;
@@ -299,6 +307,89 @@
             margin: 12.25px 10px 14.5px;
           "></h3>
         </div>
+        <table
+          class="discordBotEditorContainerSecrets"
+          style="
+            font-family: system-ui;
+            border-collapse: collapse;
+            width: 100%;
+          "
+        >
+          <tbody>
+            <tr>
+              <th style="
+                border: 1px solid #dddddd;
+                text-align: left;
+                padding: 8px;
+              ">
+                Secret
+              </th>
+              <th style="
+                border: 1px solid #dddddd;
+                text-align: left;
+                padding: 8px;
+              ">
+                Value
+              </th>
+            </tr>
+            <tr>
+              <td style="
+                border: 1px solid #dddddd;
+                text-align: left;
+              ">
+                <input
+                  value="CLIENT_ID"
+                  style="
+                    border: none;
+                    background-color: transparent;
+                    font-family: system-ui;
+                  "
+                >
+              </td>
+              <td style="
+                border: 1px solid #dddddd;
+                text-align: left;
+              ">
+                <input
+                  value="YOUR CLIENT ID"
+                  style="
+                    border: none;
+                    background-color: transparent;
+                    font-family: system-ui;
+                  "
+                >
+              </td>
+            </tr>
+            <tr>
+              <td style="
+                border: 1px solid #dddddd;
+                text-align: left;
+              ">
+                <input
+                  value="TOKEN"
+                  style="
+                    border: none;
+                    background-color: transparent;
+                    font-family: system-ui;
+                  "
+                >
+              </td>
+              <td style="
+                border: 1px solid #dddddd;
+                text-align: left;
+              ">
+                <input
+                  value="YOUR TOKEN"
+                  style="
+                    border: none;
+                    background-color: transparent;
+                    font-family: system-ui;
+                  "
+                >
+              </td>
+            </tr>
+          </tbody>
+        </table>
         <div id="discordBotEditor" class="discordBotEditor" style="
           width: 100%;
           height: 457.5px;
