--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -342,6 +342,7 @@
                   style="
                     border: none;
                     background-color: transparent;
+                    padding: 8px;
                     font-family: system-ui;
                   "
                 >
@@ -355,6 +356,7 @@
                   style="
                     border: none;
                     background-color: transparent;
+                    padding: 8px;
                     font-family: system-ui;
                   "
                 >
@@ -370,6 +372,7 @@
                   style="
                     border: none;
                     background-color: transparent;
+                    padding: 8px;
                     font-family: system-ui;
                   "
                 >
@@ -383,6 +386,7 @@
                   style="
                     border: none;
                     background-color: transparent;
+                    padding: 8px;
                     font-family: system-ui;
                   "
                 >
