Added row used to create new rows for Discord Bot secrets

--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -438,6 +438,49 @@
                 ></i>
               </td>
             </tr>
+            <tr>
+              <td style="border: 1px solid #dddddd;">
+                <input
+                  value="New Secret"
+                  style="
+                    width: calc(100% - 15px);
+                    border: none;
+                    background-color: transparent;
+                    padding: 8px;
+                    font-family: system-ui;
+                    color: #00000073;
+                  "
+                >
+              </td>
+              <td style="border: 1px solid #dddddd;">
+                <input
+                  value="New Value"
+                  style="
+                    width: calc(100% - 15px);
+                    border: none;
+                    background-color: transparent;
+                    padding: 8px;
+                    font-family: system-ui;
+                    color: #00000073;
+                  "
+                >
+              </td>
+              <td style="
+                cursor: pointer;
+                border: 1px solid #dddddd;
+              ">
+                <i
+                  class="fa fa-trash"
+                  aria-hidden="true"
+                  style="
+                    width: 6.5px;
+                    font-size: 20px;
+                    margin-left: 7.5px;
+                    color: #00000073;
+                  "
+                ></i>
+              </td>
+            </tr>
           </tbody>
         </table>
         <div id="discordBotEditor" class="discordBotEditor" style="
