--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -352,11 +352,7 @@
               ">
                 Value
               </th>
-              <th style="
-                border: 1px solid #dddddd;
-                text-align: left;
-                padding: 8px;
-              "></th>
+              <th style="border: 1px solid #dddddd;"></th>
             </tr>
             <tr>
               <td style="border: 1px solid #dddddd;">
@@ -386,14 +382,14 @@
               <td style="
                 cursor: pointer;
                 border: 1px solid #dddddd;
+                width: 32.5px;
               ">
                 <i
                   class="fa fa-trash"
                   aria-hidden="true"
                   style="
-                    width: 6.5px;
                     font-size: 20px;
-                    margin-left: 7.5px;
+                    margin-left: 8px;
                   "
                 ></i>
               </td>
@@ -426,14 +422,14 @@
               <td style="
                 cursor: pointer;
                 border: 1px solid #dddddd;
+                width: 32.5px;
               ">
                 <i
                   class="fa fa-trash"
                   aria-hidden="true"
                   style="
-                    width: 6.5px;
                     font-size: 20px;
-                    margin-left: 7.5px;
+                    margin-left: 8px;
                   "
                 ></i>
               </td>
@@ -468,14 +464,14 @@
               <td style="
                 cursor: pointer;
                 border: 1px solid #dddddd;
+                width: 32.5px
               ">
                 <i
                   class="fa fa-trash"
                   aria-hidden="true"
                   style="
-                    width: 6.5px;
                     font-size: 20px;
-                    margin-left: 7.5px;
+                    margin-left: 8px;
                     color: #00000073;
                   "
                 ></i>
