--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -72,7 +72,7 @@
       }
     </style>
   </head>
-  <body style="margin: 0;">
+  <body style="margin: 0; overflow-x: hidden;">
     <div style="display: flex; flex-direction: row; width: 100vw; height: 60px">
       <p
         style="
