--- a/client/pages/settings/index.html
+++ b/client/pages/settings/index.html
@@ -212,6 +212,7 @@
                 font-family: system-ui;
                 margin-left: -3.75px;
                 border: none;
+                background-color: transparent;
               "
             >
               <option>foreground</option>
