First version of Tiny Control; Shortcut bar fix

--- a/client/pages/integrations/index.html
+++ b/client/pages/integrations/index.html
@@ -105,7 +105,9 @@
       <datalist id="keyboardShortcuts">
         <option value="/home"></option>
         <option value="/connect"></option>
+        <option value="/monitor"></option>
         <option value="/scripts"></option>
+        <option value="/debug" disabled></option>
         <option value="/feedback"></option>
         <option value="/settings"></option>
         <option value="/help"></option>
