--- a/tinyControlClient/home.html
+++ b/tinyControlClient/home.html
@@ -3,22 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A tiny Remote Control client">
   <title>Tiny Control</title>
   <script>
-    if (!localStorage.getItem("loginDetails")) {
-      localStorage.setItem("loginDetails", JSON.stringify([
-        Array.apply(null, Array(9)).map(() => Math.floor(Math.random() * 10)).join(""),
-        Array.from(crypto.getRandomValues(new Uint8Array(8))).map((byte) => byte.toString(16).padStart(2, "0")).join("")
-      ]));
-    };
-    document.getElementById("containerCardId").innerText = JSON.parse(localStorage.getItem("loginDetails"))[0].split("").map((character, index) => (((index + 1) % 3) === 0) ? character + " " : character).join("").substring(0, JSON.parse(localStorage.getItem("loginDetails"))[0].split("").map((character, index) => (((index + 1) % 3) === 0) ? character + " " : character).join("").length - 1);
-    document.getElementById("containerCardPassword").innerText = JSON.parse(localStorage.getItem("loginDetails"))[1];
-    fetch("/api/v1/connect", {
-      method: "POST",
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: localStorage.getItem("loginDetails")
+    document.addEventListener("DOMContentLoaded", () => {
+      if (!localStorage.getItem("loginDetails")) {
+        localStorage.setItem("loginDetails", JSON.stringify([
+          Array.apply(null, Array(9)).map(() => Math.floor(Math.random() * 10)).join(""),
+          Array.from(crypto.getRandomValues(new Uint8Array(8))).map((byte) => byte.toString(16).padStart(2, "0")).join("")
+        ]));
+      };
+      document.getElementById("containerCardId").innerText = JSON.parse(localStorage.getItem("loginDetails"))[0].split("").map((character, index) => (((index + 1) % 3) === 0) ? character + " " : character).join("").substring(0, JSON.parse(localStorage.getItem("loginDetails"))[0].split("").map((character, index) => (((index + 1) % 3) === 0) ? character + " " : character).join("").length - 1);
+      document.getElementById("containerCardPassword").innerText = JSON.parse(localStorage.getItem("loginDetails"))[1];
+      fetch("/api/v1/connect", {
+        method: "POST",
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: localStorage.getItem("loginDetails")
+      });
     });
   </script>
   <style>
