--- a/server/pages/team/index.html
+++ b/server/pages/team/index.html
@@ -225,8 +225,7 @@
         <div class="content">
           <h3>Dinoscape</h3>
           <p>
-            Hi! I'm the core maintainer of Remote Control. Though I'm only 13,
-            I've spent a lot of time building an open-source remote desktop
+            Hi! I'm the core maintainer of Remote Control. I've spent a lot of time building an open-source remote desktop
             solution. Looking for new contributors to join!
           </p>
         </div>
